--- a/index.html
+++ b/index.html
@@ -6,6 +6,29 @@
     <title>My Telegram Mini App</title>
     <!-- 텔레그램 SDK 로드 (필수) -->
     <script src="https://telegram.org/js/telegram-web-app.js"></script>
+    <style>
+        body {
+            background-color: var(--tg-theme-bg-color, #ffffff);
+            color: var(--tg-theme-text-color, #222222);
+            font-family: sans-serif;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            height: 100vh;
+            margin: 0;
+        }
+        button {
+            background-color: var(--tg-theme-button-color, #248bcf);
+            color: var(--tg-theme-button-text-color, #ffffff);
+            border: none;
+            padding: 10px 20px;
+            border-radius: 8px;
+            cursor: pointer;
+            font-size: 16px;
+        }
+        .user-info { margin-bottom: 20px; text-align: center; }
+    </style>
 </head>
 <body>
     <h1>안녕하세요!</h1>
