--- a/index.html
+++ b/index.html
@@ -56,6 +56,8 @@
 <body>
 
     <div class="header">
+        <h1 id="welcome-msg">환영합니다!</h1>
+        <p>아래 메뉴에서 원하는 항목을 선택하세요.</p>
     </div>
 
     <!-- 4개 버튼 그리드 -->
