--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
         </button>
     </div>
 
-    <script>
+    <script type="module">
         const tg = window.Telegram.WebApp;
         tg.expand();
         tg.ready();
