--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Telegram Grid Menu</title>
-    <script src="https://telegram.org/js/telegram-web-app.js?59"></script>
+    <script src="https://telegram.org/js/telegram-web-app.js?62"></script>
     <style>
         body {
             background-color: var(--tg-theme-secondary-bg-color, #f0f0f0);
@@ -52,8 +52,9 @@
 
         .icon { font-size: 24px; margin-bottom: 8px; }
     </style>
-    <script type="module">
+    <script>
         const tg = window.Telegram.WebApp;
+        
         tg.ready();
         tg.expand();
         
