--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         // 버튼 클릭 핸들러
         async function handleAction(name) {
             tg.HapticFeedback.impactOccurred('medium'); // 진동 효과
-            tg.showAlert(`${name} 메뉴를 클릭하셨습니다!`);
+            //tg.showAlert(`${name} 메뉴를 클릭하셨습니다!`);
             
             // 향후 Vercel API 연동 시 fetch('/api/action', { ... }) 형태로 사용
             // Vercel API 호출
