--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <link rel="icon" href="data:;base64,iVBORw0KGgo=">
+    <link rel="icon" href="https://telegram.org" type="image/x-icon">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Telegram Grid Menu</title>
     <script src="https://telegram.org/js/telegram-web-app.js?62"></script>
